--- a/diep_frontend/src/sass/components/player.scss
+++ b/diep_frontend/src/sass/components/player.scss
@@ -5,8 +5,8 @@
 	border-radius: 50%;
 	border: solid 4px darkred;
 	position: relative;
-    top: 30%;
-    left: 20%;
+    top: 300px;
+    left: 300px;
 	&::before{
 		content: '';
 		position: absolute;
