--- a/diep_frontend/src/sass/components/map.scss
+++ b/diep_frontend/src/sass/components/map.scss
@@ -1,5 +1,6 @@
 .map{
-	width: 100vw;
-	height: 100vh;
+	width: calc(100vw - 20px);
+	height: calc(100vh - 20px);
 	background-color: lightgrey;
+	border: solid 10px black;
 }
