--- a/diep_frontend/src/sass/globals.scss
+++ b/diep_frontend/src/sass/globals.scss
@@ -1,9 +1,11 @@
 body{
 	width: 100vw;
+	height: 100vh;
 	padding: 0;
 	margin: 0;
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	background-color: lightgrey;
 }
 
