--- a/diep_frontend/src/sass/style.scss
+++ b/diep_frontend/src/sass/style.scss
@@ -2,3 +2,4 @@
 @use './components/map.scss';
 @use './components/joinGameForm.scss';
 @use './components/tank.scss';
+@use './components/endGameScreen.scss';
